cabal-version:  2.2
name:           InternedData
version:        0.0.0.1
author:         Christian Hoener zu Siederdissen, 2017-2020
copyright:      Christian Hoener zu Siederdissen, 2017-2020
homepage:       https://github.com/choener/InternedData
bug-reports:    https://github.com/choener/InternedData/issues
maintainer:     choener@bioinf.uni-leipzig.de
category:       Data, Data Structures, Natural Language Processing
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
stability:      experimental
tested-with:    GHC == 8.6.5
synopsis:       Data interning (with compact regions where possible)
description:
                Interned (UTF8) @ByteString@s where the interned structure is
                held in a compact region, if possible.
                .
                - @Data.ByteString.Intern@ does *not* use compact regions



Extra-Source-Files:
  README.md
  changelog.md



common deps
  build-depends: base               >= 4.7      &&  < 5.0
               , aeson              >= 0.8
               , binary             >= 0.7
               , bytestring         >= 0.10.4
               , cereal             >= 0.4
               , cereal-text        >= 0.1
               , deepseq            >= 1.3
               , hashable           >= 1.2
               , lens               >= 4.0
               , string-conversions >= 0.4
               , text               >= 1.2
               , text-binary        >= 0.1
               , utf8-string        >= 1.0
               , vector-th-unbox    >= 0.2
               --
               , bimaps             == 0.1.0.*
  if impl(ghc >= 8.2.0)
    build-depends: compact          >= 0.1.0.1
  default-extensions: BangPatterns
                    , CPP
                    , DataKinds
                    , DeriveGeneric
                    , FlexibleContexts
                    , MultiParamTypeClasses
                    , PolyKinds
                    , RankNTypes
                    , ScopedTypeVariables
                    , TemplateHaskell
                    , TupleSections
                    , TypeFamilies
                    , UnicodeSyntax
  default-language:
    Haskell2010
  ghc-options:
    -O2 -funbox-strict-fields



library
  import:
    deps
  exposed-modules:
    Data.ByteString.Interned
    Data.ByteString.Interned.Internal



test-suite properties
  common:
    deps
  type:
    exitcode-stdio-1.0
  main-is:
    properties.hs
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:
    tests
  build-depends: base
               , aeson
               , binary
               , cereal
               , QuickCheck
               , lens
               , string-conversions
               , text
               , tasty                >= 0.11
               , tasty-quickcheck     >= 0.8
               , tasty-th             >= 0.1



benchmark BenchmarkBuilder
  common:
    deps
  build-depends: base
               , bytestring
               , containers
               , criterion                >= 1.0.2
               , deepseq
               , text
  hs-source-dirs:
    tests
  main-is:
    BenchmarkBuilder.hs
  type:
    exitcode-stdio-1.0
  default-language:
    Haskell2010
  default-extensions: BangPatterns
                    , ScopedTypeVariables
  ghc-options:
    -O2
    -rtsopts



source-repository head
  type: git
  location: git://github.com/choener/InternedData

